--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bucketbase"
-version = "1.3.1"  # do not edit manually. kept in sync with `tool.commitizen` config via automation
+version = "1.3.2"  # do not edit manually. kept in sync with `tool.commitizen` config via automation
 description = "bucketbase"
 authors = ["Andrei Suiu <andrei.suiu@gmail.com>"]
 repository = "https://github.com/asuiu/bucketbase"
@@ -16,7 +16,8 @@ StrEnum = ">=0.4.0"
 tsx = ">=0.1.16"
 filelock= ">3.0.12"
 typing_extensions = ">=4.9.0"
-
+minio = { version = ">=7.2.4", optional = true }
+multiminio = { version = ">=1.0.2", optional = true }
 
 [tool.poetry.extras]
 minio = ["minio", "multiminio"]
