Fixed listObjects in S3BucketSDKv1 & S3Bucket to return over 1000 objects with pagination

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -6,15 +6,15 @@ plugins {
 
 group = 'com.esamtrade'
 description = 'BucketBase Java library for for abstracting object storage solutions'
+version = '1.0.0-SNAPSHOT'
 
-version = '1.0.0'
 java.sourceCompatibility = JavaVersion.VERSION_17
 
 project.ext {
     awsSdkVersionV2 = "2.30.36"
     awsSdkVersionV1 = "1.12.782"
-
 }
+
 repositories {
     mavenCentral()
     maven {
@@ -28,9 +28,10 @@ repositories {
 
 dependencies {
     implementation("commons-io:commons-io:2.16.1")
-    implementation("software.amazon.awssdk:s3:${awsSdkVersionV2}")
-    implementation("com.amazonaws:aws-java-sdk:${awsSdkVersionV1}")
+    implementation("software.amazon.awssdk:s3:${awsSdkVersionV2}") // AWS SDK v2 for S3
+    implementation("com.amazonaws:aws-java-sdk:${awsSdkVersionV1}") // AWS SDK v1
 
+    // JUnit for testing
     testImplementation platform("org.junit:junit-bom:5.10.0")
     testImplementation "org.junit.jupiter:junit-jupiter"
 }
@@ -44,11 +45,17 @@ tasks.register("sourceJar", Jar) {
     archiveClassifier.set("sources")
 }
 
+tasks.register("javadocJar", Jar) {
+    from javadoc
+    archiveClassifier.set("javadoc")
+}
+
 publishing {
     publications {
         esamLibrary(MavenPublication) {
             from(components.java)
             artifact tasks.named("sourceJar").get() // This line is added to include source code in the publication
+            artifact tasks.named("javadocJar").get() // This line is added to include the shadowJar in the publication
         }
     }
     repositories {
@@ -58,7 +65,7 @@ publishing {
                 awsIm(AwsImAuthentication)  // takes the credentials from the ~/.aws/credentials
             }
             if (project.version.endsWith("-SNAPSHOT")) {
-                url "s3://esamtrade-maven-repo/snapshots"
+                url "s3://esamtrade-maven-repo/releases"
             } else {
                 url "s3://esamtrade-maven-repo/releases"
             }
